# heappulse

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  bucket_stats.csv  build-allocator.sh  clean.sh  compression-versions.c  debug-std.sh  gdb-prelude.txt  liveness-test-results.ipynb  out.txt  page-liveness-test-results.ipynb  page-tracking-test-results.ipynb  results.ipynb  run-example.sh  run-example2.sh  run-examples.sh  run-std.sh  run-tests.sh  run.sh  segfault.c  site_stats___tests_pagetest_exe_109230.csv  site_stats___tests_test1_exe_556239da71fc.csv  site_stats___tests_test1_exe_55805f53e1fc.csv  site_stats___tests_test1_exe_55dfcfedc1fc.csv  site_stats___tests_test1_exe_56024511b1a9.csv  site_stats___tests_test1_exe_56024511b1fc.csv  site_stats___tests_test1_exe_5621b31371a9.csv  site_stats___tests_test1_exe_5621b31371fc.csv  site_stats__lib_x86_64-linux-gnu_libpthread_so_0_7f7a3f547b82.csv  site_stats__lib_x86_64-linux-gnu_libpthread_so_0_7fe35cc5eb82.csv  test  test.cpp  test.txt  test1  test1.cpp
analysis/: access-patterns.ipynb  generational-hypothesis.ipynb  heap-compressibility-peak-interval.ipynb  huge-page-access-compression.ipynb  page-tracking-test-results.ipynb  page-usage-over-time.ipynb  prediction-test.ipynb
data/: 505.csv  508.csv  511.csv  519.csv
data/compression-test/: 511.csv  519.csv
data/liveness-test/: 500.csv  501.csv  502.csv  505.csv  511.csv  520.csv  521.csv  525.csv  541.csv  544.csv  548.csv
data/object-liveness-test/: 507.csv  508.csv  510.csv  519.csv  523.csv  526.csv  527.csv  531.csv  538.csv  549.csv  557.csv
data/page-liveness-test/: 500.csv
include/: bkmalloc.cpp  bkmalloc.h
outdated-scripts/: OUTDATED-build-allocator.sh  OUTDATED-run.sh  pagemap.c
src/: compression_test.cpp  heappulse.cpp  hook.cpp  liveness_test.cpp  object_liveness_test.cpp  old_hook.cpp  page_liveness_test.cpp  page_tracking.cpp  pkeys.cpp  stack_file.cpp  stack_map.cpp  zswap_compression(old).cpp  zswap_compression.cpp
src/include/: backtrace.hpp  bit_vec.hpp  compressor.hpp  config.hpp  interval_test.hpp  stack_csv.hpp  stack_file.hpp  stack_io.hpp  stack_map.hpp  stack_set.hpp  stack_string.hpp  stack_vec.hpp  timer.hpp
src/intervals/: access_compression_test.cpp  access_patterns.cpp  access_patterns_test.cpp  all.cpp  compression_alloc.cpp  compression_test.cpp  dummy_test.cpp  generational.cpp  group_test.cpp  huge_page_access_compression_test.cpp  object_liveness_test.cpp  page_liveness_test.cpp  page_tracking.cpp
tests/: basic.cpp  build-tests.sh  pagetest.cpp  pagetest.err  pagetest.out  pagetest_alloc.csv  pagetest_buckets.csv  pagetest_malloc.csv  pagetest_page_stats.csv  reuse_test.cpp  reuse_test.err  test1.cpp  test1.csv  test1.err  test1.out  test1_alloc.csv  test1_buckets.csv  test1_page_stats.csv  test2.cpp  test2.csv  test2.err  test2.out  test2_alloc.csv  test2_buckets.csv  test2_page_stats.csv
tests/old/: basic.cpp  basic_access_compression.csv  basic_access_patterns.csv  basic_generational.csv  pagetest.cpp  pagetest_access_compression.csv  pagetest_access_patterns.csv  pagetest_alloc.csv  pagetest_generational.csv  pagetest_page_stats.csv  pagetest_page_tracking.csv  read_access_test.cpp  read_access_test_generational.csv  reuse_test_access_compression.csv  reuse_test_access_patterns.csv  reuse_test_generational.csv  test1.cpp  test1_access_compression.csv  test1_access_patterns.csv  test1_buckets.csv  test1_generational.csv  test1_page_stats.csv  test2.cpp  test2_access_compression.csv  test2_access_patterns.csv  test2_generational.csv  test2_page_stats.csv
tests/old/results/: access-lz4-compression.csv
tests/test1/: test.cpp
tests/test1/results/: access-lz4-compression.csv
tests/test2/: test.cpp
tests/test2/results/: access-lz4-compression.csv
tests/test3/results/: access-lz4-compression.csv
tests/test4/results/: access-lz4-compression.csv
tests/test5/: test.cpp
tests/test5/results/: access-lz4-compression.csv
tests/test6/: test.f90
